force-app/main/default/objects/AlocacaoPrevista__c/AlocacaoPrevista__c.object-meta.xml
<CustomObject>
    <description>Planejamento comercial (Baseline) do serviço.</description>
    <label>Alocação Prevista</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>ID Alocação Prevista</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alocações Previstas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>