force-app/main/default/objects/AlocacaoPrevista__c/fields/CustoEstimado__c.field-meta.xml
<CustomField>
    <fullName>CustoEstimado__c</fullName>
    <description>Custo hora estimado para o perfil.</description>
    <label>Custo Estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>