force-app/main/default/objects/AlocacaoPrevista__c/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <description>Início da alocação prevista.</description>
    <label>Data Início</label>
    <type>Date</type>
</CustomField>