force-app/main/default/objects/AlocacaoPrevista__c/fields/PercentualAlocacao__c.field-meta.xml
<CustomField>
    <fullName>PercentualAlocacao__c</fullName>
    <description>% de dedicação do recurso.</description>
    <label>Percentual de Alocação</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>