force-app/main/default/objects/AlocacaoPrevista__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <description>Nome do produto ou perfil vendido.</description>
    <label>Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>