force-app/main/default/objects/AlocacaoPrevista__c/fields/ReceitaTotal__c.field-meta.xml
<CustomField>
    <fullName>ReceitaTotal__c</fullName>
    <label>Receita Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>