force-app/main/default/objects/AlocacaoPrevista__c/fields/Servico__c.field-meta.xml
<CustomField>
    <fullName>Servico__c</fullName>
    <description>Serviço pai desta previsão.</description>
    <label>Serviço</label>
    <referenceTo>Servico__c</referenceTo>
    <relationshipLabel>Alocações Previstas</relationshipLabel>
    <relationshipName>AlocacoesPrevistas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>